syntax = "proto3";

import "google/protobuf/empty.proto";
import "github.com/extrame/gocryptotrader/exchanges/ticker/price.proto";

package grpc;

service GoCryptoTraderService {
    rpc GetTickers(google.protobuf.Empty) returns (AllEnabledExchangeCurrencies){}
    rpc GetTicker(SpecificTicker) returns(ticker.Price){}
    rpc UpdateTicker(google.protobuf.Empty) returns(stream UpdateTickerReport){}
 }

 message UpdateTickerReport {
    ticker.Price Price = 1;
    string ExchangeName =2;
    string AssetType =3;
 }

 message EnabledExchangeCurrencies {
    string ExchangeName = 1;
    repeated ticker.Price ExchangeValues = 2;
 }

 message AllEnabledExchangeCurrencies {
    repeated EnabledExchangeCurrencies ExchangeCurrencies= 1;
 }

 message SpecificTicker {
     string Currency =1;
     string ExchangeName =2;
     string AssetType =3;
 }